--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,8 +10,13 @@ jobs:
   ci:
     runs-on: ubuntu-latest
     steps:
+      - name: Run Gazelle
+        run: bazel run //:gazelle
+        
       - uses: actions/checkout@v2
       - uses: bazelbuild/setup-bazelisk@v2
+      # add gazelle
+
       - run: bazel build //...
       - run: bazel test //...
       
