--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,10 +11,24 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+
+      - name: Cache Bazel output
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/bazel
+            bazel-out
+          key: ${{ runner.os }}-bazel-${{ hashFiles('**/WORKSPACE', '**/BUILD.bazel', '**/BUILD', '**/.bazelrc', '**/.bazelversion') }}
+          restore-keys: |
+            ${{ runner.os }}-bazel-
+
       - uses: bazelbuild/setup-bazelisk@v2
+
       - name: Run Gazelle
         run: bazel run //:gazelle
+
       - name: Build
         run: bazel build //...
+
       - name: Test
         run: bazel test //...
