--- a/.github/workflows/release-drafter.yml
+++ b/.github/workflows/release-drafter.yml
@@ -13,8 +13,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Run Release Drafter
-        uses: release-drafter/release-drafter@v5
+      - name: Release Drafter
+        uses: release-drafter/release-drafter@v6.0.0
+    
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
